<resources>
    <string name="app_name" fontFamily="@font/nexa_light">Price Checker</string>
    <string name="title_activity_settings">Settings</string>

    //Preference general string
    <string name="pref_technosys_webapi_title">Web API URL</string>
    <string name="pref_technosys_webapi_key">WebAPILink</string>
    <string name="pref_technosys_webapi_default_link">http://192.168.1.24:8919</string>
    <string name="pref_technosys_Database_title">Data Base Key</string>
    <string name="pref_technosys_Database_key">DataBaseKey</string>
    <string name="pref_technosys_Database_default">ts</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="home_icon">Home</string>
    <string name="signout">Signout</string>
    <string name="product_image_name">product_image_name</string>
    <string name="price">PRICE</string>
    <string name="market_price">Market Price</string>
    <string name="our_price">Our Price</string>
    <string name="offers">OFFERS</string>
    <string name="business_exper">business_exper</string>
    <string name="price_checker_logo">Price Checker Logo</string>
    <string name="open_home_btn">OPEN</string>
    <string name="scan_here">SCAN HERE</string>
    <string name="technosys_logo">technosys logo</string>
    <string name="branch_logo">Branch Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>
