<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:background="@color/colorWhite"
    android:layout_alignParentEnd="true"
    android:gravity="center"
    android:padding="2dp">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:contentDescription="@string/price_checker_logo"
            app:srcCompat="@drawable/price_checker_logo"
            android:layout_row="0"
            android:layout_column="0"/>

        <ImageView
            android:contentDescription="@string/branch_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"/>

        <ImageView
            android:layout_width="90dp"
            android:contentDescription="@string/technosys_logo"
            app:srcCompat="@drawable/ic_technosys_logo"
            android:layout_height="40dp"
            android:layout_row="0"
            android:layout_marginEnd="20dp"
            android:layout_column="2" />


    </GridLayout>
</RelativeLayout>

